--- a/main.css
+++ b/main.css
@@ -307,6 +307,9 @@ RESULTS LIST
 	margin-left: auto;
 	background-color:white;
   opacity: 0.7;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
 }
 .content ul li{
 	list-style-type: none;
